# ai-dev-engine

./: .gitignore  AI_DEV_TOOL_COMPARISON_2026.md  ApexElite.spec  BUILD_EXE.bat  README.md  RELEASE_BUILD.md  apex_desktop.py  cli.py  launcher.py  pyproject.toml  requirements.txt  run_test.py  start_bot.ps1  telegram_bot.py
.github/workflows/: ci.yml  quality.yml  release.yml  security.yml
core/: coder.py  file_engine.py  llm.py  orchestrator.py  planner.py  project_manager.py  reviewer.py
core/ai/: __init__.py  agent_runtime.py  ai_engine.py  apex_desktop.py  auto_compactor.py  cloud_router.py  deployer.py  doctor.py  editor.py  elite_demo.py  elite_engine.py  elite_pipeline.py  elite_runtime.py  fullstack_pipeline.py  groq_provider.py  harness.py  integrations.py  memory_system.py  mock_ai.py  model_router.py  openai_provider.py  parallel_gen.py  pipeline.py  post_fixer.py  project_classifier.py  provider.py  provider_factory.py  public_apis.py  query_engine.py  response_cleaner.py  self_healer.py  senior_team.py  session_store.py  skills_library.py  streaming.py  test_generator.py  tool_registry.py
core/execution/: auto_runner.py  debugger.py  runner.py
core/memory/: debug_log.py  project_memory.py
core/tools/: dependency_installer.py  file_writer.py
elite_demo_output/: README.md
elite_demo_output/docs/: catalog-integrations.md  doctor-report.md  elite-manifest.json  (+2 more)
elite_demo_output_v2/: README.md
my_calc08/: README.md
my_calc09/: README.md  main.py
test_project/: README.md
tests/: test_cli.py  test_orchestrator.py
todo/: .env.example
(+56 files in other folders)
